@@ -22,6 +22,10 @@ Extension modules
   today() and now() now round system timestamps to the closest
   microsecond <http://www.python.org/sf/661086>.
 
+  In dt.asdatetime(tz), if tz.utcoffset(dt) returns a duration,
+  ValueError is raised of tz.dst(dt) returns None (2.3a1 treated it
+  as 0 instead).
+  
 Library
 -------
 
